# libtomcrypt

./: .gitignore  CMakeLists.txt  README.md  UpgradeLog.htm  cmake-format.py  coverity.sh  helper.pl  libtomcrypt.pc.in  libtomcrypt_VS2008.sln  libtomcrypt_VS2008.vcxproj  libtomcrypt_VS2008.vcxproj.filters  makefile  makefile.mingw  makefile.msvc  makefile.shared  makefile.unix  makefile_include.mk  testme.sh  updatemakes.sh
.ci/: build.sh  check_source.sh  clang-tidy.sh  coverage.sh  coverage_more.sh  meta_builds.sh  run.sh  testbuild.sh  valgrind.sh
.github/workflows/: main.yml
contrib/: sbom.cdx.json
demos/: CMakeLists.txt  aesgcm.c  crypt.c  hashsum.c  ltc  openssl-enc.c  pem-info.c  small.c  timing.c  tv_gen.c
doc/: crypt.tex
notes/etc/: saferp_optimizer.c  whirlgen.c  whirltest.c
src/encauth/chachapoly/: chacha20poly1305_setiv.c
src/hashes/sha2/: sha512_224.c  sha512_256.c
src/headers/: tomcrypt_cfg.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_pk.h  tomcrypt_private.h
src/mac/poly1305/: poly1305.c  poly1305_file.c  poly1305_memory.c  poly1305_memory_multi.c  poly1305_test.c
src/pk/ecc/: ecc_shared_secret.c
tests/: CMakeLists.txt  bcrypt_test.c  der_test.c  ecc_test.c  multi_test.c
